feat: Notification History API & Auth endpoints refactor