@@ -1,7 +1,7 @@
 package com.yurepires.lazydeploy.dto.request;
 
+import com.fasterxml.jackson.annotation.JsonProperty;
 import jakarta.validation.constraints.NotBlank;
-import jakarta.validation.constraints.NotNull;
 
 import java.util.Collections;
 import java.util.LinkedHashMap;
@@ -10,18 +10,27 @@ import java.util.Map;
 public record UpdateChannelRequest(
         @NotBlank String type,
         Boolean enabled,
-        @NotNull Map<String, Object> parameters
+        Map<String, Object> parameters,
+        @JsonProperty(access = JsonProperty.Access.WRITE_ONLY) String recipient
 ) {
+
+    public UpdateChannelRequest(
+            String type,
+            Boolean enabled,
+            Map<String, Object> parameters
+    ) {
+        this(type, enabled, parameters, null);
+    }
 
     public UpdateChannelRequest {
         if (enabled == null) {
             enabled = Boolean.TRUE;
         }
 
-        if (parameters != null) {
-            parameters = Collections.unmodifiableMap(
-                    new LinkedHashMap<>(parameters)
-            );
+        if (parameters == null) {
+            parameters = Map.of();
+        } else {
+            parameters = Collections.unmodifiableMap(new LinkedHashMap<>(parameters));
         }
     }
 }
